# show-me-tokens

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.server.json  vite.config.ts
.github/workflows/: publish-npm.yml
docs/superpowers/specs/: 2026-07-21-show-me-tokens-design.md
src/: cli.ts  server.ts
src/adapters/: base.ts  qoder.ts  qoderwork.ts  registry.ts
src/formatters/: csv.ts  json.ts  shared.ts  table.ts
src/models/: index.ts
src/pricing/: huggingface.ts
src/server/: app.ts  launcher.ts
src/server/middleware/: errorHandler.ts
src/server/routes/: agents.ts  export.ts  sessions.ts  summary.ts
src/services/: usageService.ts
src/shared/: types.ts
src/show_me_tokens/: __init__.py  __main__.py  cli.py  models.py
src/show_me_tokens/adapters/: __init__.py  base.py  qoder.py  qoderwork.py  registry.py
src/show_me_tokens/formatters/: __init__.py  csv.py  json.py  table.py
tests/: __init__.py  test_cli.py  test_formatters.py  test_models.py  test_qoder_adapter.py  test_qoderwork_adapter.py
tests/adapters/: qoder.test.ts  qoderwork.test.ts
tests/cli/: cli.test.ts
tests/formatters/: formatters.test.ts
tests/models/: models.test.ts
tests/server/: sessions.route.test.ts
web/: index.html  tsconfig.json
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: AgentSelector.tsx  ExportButtons.tsx  FilterPanel.tsx  SessionsTable.tsx  SummaryCards.tsx  TokenChart.tsx
web/src/hooks/: useSessions.ts
